修改字体样式

--- a/ExcelClient/FormConsole.resx
+++ b/ExcelClient/FormConsole.resx
@@ -120,8 +120,11 @@
   <metadata name="barManager1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <metadata name="barAndDockingController1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>488, 17</value>
+  </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>321</value>
+    <value>125</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="nbiGoods.LargeImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -672,9 +675,9 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAa
-        CQAAAk1TRnQBSQFMAgEBAgEAATABAAEwAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
-        AwABQAMAARADAAEBAQABCAYAAQQYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADa
+        DAAAAk1TRnQBSQFMAgEBBQEAAUgBAAFIAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABQAMAASADAAEBAQABCAYAAQgYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
         AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
@@ -701,17 +704,33 @@
         AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
         AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
         AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
-        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/wIAAfYBWQN6B1kCWAH/
-        AQAB8gy8AfIiAAH2AXoJmgN6AfYBAAG8DP8BvCIAAfYBegmaA3oB9gEAAbwM/wG8IgAB9gF6CZoDegH2
-        AQABvAz/AbwiAAH2AXoJmgN6AfYBAAG8DP8BvCIAAfYBegKgB5oDegH2AQABvAz/AbwiAAH2AXoDoAaa
-        AnoBeQH/AQABvAz/AbwiAAH2AXoCoAiaAXoBGwH/AQABvAn/AvQB/wG8IgAB9gF6A6AHmgF6AfQCAAG8
-        CP8D9AH/AbwiAAH2AXoEoAaaAXoB9AIAAbwH/wL0AvMB/wG8IgAB9gF6BqABmgGgApoBegH0AgABvAb/
-        AvQC8wHyAf8BvCIAAfYBegqgAXoB9AIAAbwE/wP0AfME/wG8IgAB9gF6CqABegH0AgABvAH/AfQB/wT0
-        AfMB/wL0AQcB8SIAAfYBegqgAXoB9AIAAbwB/wX0AvMB/wHyAQcB8QH/IgAB9gF6A6AEmgOgAXoB9AIA
-        AbwJ/wEHAfEB/yMAAfYKWQF6AZoB/wIAAfIJvAHxAf8jAAFCAU0BPgcAAT4DAAEoAwABQAMAARADAAEB
-        AQABAQUAAYAXAAP/AQABgAEAAYABAQQAAYABAAGAAQEEAAGAAQABgAEBBAABgAEAAYABAQQAAYABAAGA
-        AQEEAAGAAQABgAEBBAABgAEAAYABAQQAAYABAAGAAQEEAAGAAQEBgAEBBAABgAEBAYABAQQAAYABAQGA
-        AQEEAAGAAQEBgAEBBAABgAEBAYABAQQAAYABAQGAAQEEAAGAAQEBgAEDBAABgAEBAYABBwQACw==
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/wUABP87AAL/Au0C/wMA
+        Af8B9AH/MwAC/wHtAosB7QL/AgABBwH0AUsB/zEAAv8B9wKtAosB7QP/AXMC/wEHMAAC/wHvBK0CiwHt
+        Av8B8QEAAf8BczAAAf8B7wKzAa0B8gH/AfUCiwHtAfQB/wEAAf8B7zAAAf8BtAKzAbQBuwEJAbsBtAKL
+        Ae0E/zAAAf8BBwG0AbMBtQGzAa0B/wKtAosB9wH/AXMB/zEAAf8BBwG0ArMBrQH0AQkBuwG0AosBBwH0
+        MwAB/wHuAbQBswGLAfIBiwH/Aq0BiwFuAf80AAH/Ae4BtAGtAbQBuwKtAbQB7QFmAf81AAH/Ae4BtAOz
+        AYsB9AGLAWYB/zYAAf8BvAG0ArMBiwH0AYsB8AH/NwAB/wG8BLQB7gH/OQAG/3QABP8E9AEcAU8CSQEo
+        AVAB/wEAAfIMvAHyAgAB9gFZA3oHWQJYEf8BAAH/Ae0D9APzAVABeQF4AVcCUAH/AQABvAz/AbwCAAH2
+        AXoJmgN6AfYQ/wEAAf8BtQH0BfMB8QFyAnkBeAFQAf8BAAG8DP8BvAIAAfYBegmaA3oB9gf/AvQH/wEA
+        Af8BtQL0BfMB8gFzApkBcgH/AQABvAz/AbwCAAH2AXoJmgN6AfYBGQH/ARkC/wH0ARkBCQEZAfQBGQX/
+        AQAB/wG1A/QBtQOuAfQB8gLxAv8BAAG8DP8BvAIAAfYBegmaA3oB9gLcAhkBCQIZAdwBGQHxAdwBGQEb
+        AhkB9AEAAf8BtQH1AvQBrgO0AfQB8wHyAfMC/wEAAbwM/wG8AgAB9gF6AqAHmgN6AfYC2wHcARkB3AEJ
+        AtwCGQHcAQkDGQHbAQAB/wG1AvUB9AGuAgkBzwH0A/MC/wEAAbwM/wG8AgAB9gF6A6AGmgJ6AXkB/wPb
+        AdwB2wEJAdsB3AEZAdwBGgF6ARkC3AHbAv8BtQHyAvUBrgPxAfUC8wHwAfQB/wEAAbwJ/wL0Af8BvAIA
+        AfYBegKgCJoBegEbAf8B1ALbAdwE2wHcAdUBCQG8AdsB3ALbAf8BzwGtAe0B8QL1A/QC8wHwAYsBswH/
+        AQABvAj/A/QB/wG8AgAB9gF6A6AHmgF6AfQBAAHUAdsD1AHVAdQB1QHbAdQB3AEZA9QB1QEAAf8BuwHP
+        AewB8QL1AvQB8wHwAYsBswG7Af8BAAG8B/8C9ALzAf8BvAIAAfYBegSgBpoBegH0AQAB1QnUAdwB8ATU
+        AgABkQG7Ac8B7AHxAvUB9AHwAa4BtAG7Af8CAAG8Bv8C9ALzAfIB/wG8AgAB9gF6BqABmgGgApoBegH0
+        AQABCQmzAboBuwGzARkC9AIAAbUB8wG7Ac8B7AHxAfUB8QGuAbQBuwH/AwABvAT/A/QB8wT/AbwCAAH2
+        AXoKoAF6AfQBAAqzAbQBuwKzAQkB9AIAAbUB8wHyAbsBzwHsAbwCtAG7Af8EAAG8Af8B9AH/BPQB8wH/
+        AvQBBwHxAgAB9gF6CqABegH0AQABswHsAZECswEJAdwEswGtBLMCAAG1AfUB9AH/AbsBzwGuArsB/wUA
+        AbwB/wX0AvMB/wHyAQcB8QH/AgAB9gF6CqABegH0AQAQswcAAbsBGQG7BwABvAn/AQcB8QH/AwAB9gF6
+        A6AEmgOgAXoB9AEAEK0RAAHyCbwB8QH/BAAB9gpZAXoBmgH/AQAQrAFCAU0BPgcAAT4DAAEoAwABQAMA
+        ASADAAEBAQABAQYAAQEWAAP/AQAB8AH/BgAB4AFxBgABwAEwBgABgAgAAQQHAAEEFgABgAEBBgABwAEB
+        BgAB4AEBBgAB8AEBBgAB+AEBBgAB/AEDBgAB/gEHBgAC/wYAAYABAAGAAQEBgAMAAYABAAGAAQEBgAMA
+        AYABAAGAAQEBgAMAAYABAAGAAQEBgAMAAYABAAGAAQEBgAMAAYABAAGAAQEBgAMAAYABAAGAAQEBgAUA
+        AYABAQGABQABgAEBAYABAQIAAYABAAGAAQEBgAEBAgABwAEBAYABAQGAAQECAAHAAQMBgAEBAYABAQIA
+        AcABBwGAAQEBgAEBAgABwAEPAYABAQGAAQECAAH+AT8BgAEDAYABAQIAAv8BgAEHAYABAQIACw==
 </value>
   </data>
   <metadata name="mdiManager1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
