修改默认样式

--- a/ExcelClient/FormConsole.resx
+++ b/ExcelClient/FormConsole.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <metadata name="barManager1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
+    <value>107, 17</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="skinBarSubItem1.Glyph" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -190,7 +190,7 @@
 </value>
   </data>
   <metadata name="barAndDockingController1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>488, 17</value>
+    <value>604, 17</value>
   </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>125</value>
@@ -734,14 +734,14 @@
 </value>
   </data>
   <metadata name="imageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>373, 17</value>
+    <value>489, 17</value>
   </metadata>
   <data name="imageList1.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADY
-        DAAAAk1TRnQBSQFMAgEBBQEAAagBAAGoAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABU
+        DgAAAk1TRnQBSQFMAgEBBwEAAcABAAHAAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABQAMAASADAAEBAQABCAYAAQgYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
@@ -769,42 +769,52 @@
         AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
         AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
         AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
-        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/wUABP87AAL/Au0C/wMA
-        Af8B9AH/MwAC/wHtAosB7QL/AgABBwH0AUsB/zEAAv8B9wKtAosB7QP/AXMC/wEHMAAC/wHvBK0CiwHt
-        Av8B8QEAAf8BczAAAf8B7wKzAa0B8gL/AosB7QH0Af8BAAH/Ae8wAAH/AbQCswG0AbsBCQG7AbQCiwHt
-        BP8wAAH/AQcBtAGzAbUBswGtAf8CrQKLAfcB/wFzAf8xAAH/AQcBtAKzAa0B9AEJAbsBtAKLAQcB9DMA
-        Af8BvAG0AbMBiwHyAYsB/wKtAYsBbgH/NAAB/wG8AbQBrQG0AbsCrQG0Ae0BZgH/NQAB/wG8AbQDswGL
-        AfQBiwFmAf82AAH/AbwBtAKzAYsB9AGLAfAB/zcAAf8BvAS0AbwB/zkABv90AAT/BPQBHAFPAkkBKAFQ
-        Af8BAAHyDLwB8gIAAfYBWQN6B1kCWBH/AQAB/wHtA/QD8wFQAXkBeAFXAlAB/wEAAbwM/wG8AgAB9gF6
-        CZoDegH2EP8BAAH/AbUB9AXzAfEBcgJ5AXgBUAH/AQABvAz/AbwCAAH2AXoJmgN6AfYH/wL0B/8BAAH/
-        AbUC9AXzAfIBcwKZAXIB/wEAAbwM/wG8AgAB9gF6CZoDegH2ARkB/wEZAv8B9AEZAQkBGQH0ARkF/wEA
-        Af8BtQP0AbUDrgH0AfIC8QL/AQABvAz/AbwCAAH2AXoJmgN6AfYC3AIZAQkCGQHcARkB8QHcARkBGwIZ
-        AfQBAAH/AbUB/wL0Aa4DtAH0AfMB8gHzAv8BAAG8DP8BvAIAAfYBegKgB5oDegH2AtsB3AEZAdwBCQLc
-        AhkB3AEJAxkB2wEAAf8BtQL/AfQBrgIJAc8B9APzAv8BAAG8DP8BvAIAAfYBegOgBpoCegF5Af8D2wHc
-        AdsBCQHbAdwBGQHcARoBegEZAtwB2wL/AbUB8gL/Aa4D8QH/AvMB8AH0Af8BAAG8Cf8C9AH/AbwCAAH2
-        AXoCoAiaAXoBGwH/AdQC2wHcBNsB3AHVAQkBvAHbAdwC2wH/Ac8BrQHtAfEC/wP0AvMB8AGLAbMB/wEA
-        AbwI/wP0Af8BvAIAAfYBegOgB5oBegH0AQAB1AHbA9QB1QHUAdUB2wHUAdwBGQPUAdUBAAH/AbsBzwHs
-        AfEC/wL0AfMB8AGLAbMBuwH/AQABvAf/AvQC8wH/AbwCAAH2AXoEoAaaAXoB9AEAAdUJ1AHcAfAE1AIA
-        AZEBuwHPAewB8QL/AfQB8AGuAbQBuwH/AgABvAb/AvQC8wHyAf8BvAIAAfYBegagAZoBoAKaAXoB9AEA
-        AQkJswG6AbsBswEZAvQCAAG1AfMBuwHPAewB8QH/AfEBrgG0AbsB/wMAAbwE/wP0AfME/wG8AgAB9gF6
-        CqABegH0AQAKswG0AbsCswEJAfQCAAG1AfMB8gG7Ac8B7AG8ArQBuwH/BAABvAH/AfQB/wT0AfMB/wL0
-        AQcB8QIAAfYBegqgAXoB9AEAAbMB7AGRArMBCQHcBLMBrQSzAgABtQH/AfQB/wG7Ac8BrgK7Af8FAAG8
-        Af8F9ALzAf8B8gEHAfEB/wIAAfYBegqgAXoB9AEAELMHAAG7ARkBuwcAAbwJ/wEHAfEB/wMAAfYBegOg
-        BJoDoAF6AfQBABCtEQAB8gm8AfEB/wQAAfYKWQF6AZoB/wEAEKwBQgFNAT4HAAE+AwABKAMAAUADAAEg
-        AwABAQEAAQEGAAEBFgAD/wEAAfAB/wYAAeABcQYAAcABMAYAAYAIAAEEBwABBBYAAYABAQYAAcABAQYA
-        AeABAQYAAfABAQYAAfgBAQYAAfwBAwYAAf4BBwYAAv8GAAGAAQABgAEBAYADAAGAAQABgAEBAYADAAGA
-        AQABgAEBAYADAAGAAQABgAEBAYADAAGAAQABgAEBAYADAAGAAQABgAEBAYADAAGAAQABgAEBAYAFAAGA
-        AQEBgAUAAYABAQGAAQECAAGAAQABgAEBAYABAQIAAcABAQGAAQEBgAEBAgABwAEDAYABAQGAAQECAAHA
-        AQcBgAEBAYABAQIAAcABDwGAAQEBgAEBAgAB/gE/AYABAwGAAQECAAL/AYABBwGAAQECAAs=
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/wIAAfYBWQN6B1kCWBH/
+        BAAE/xkAAfYBegmaA3oB9hD/AwAC/wLtAv8DAAH/AfQB/xIAAfYBegmaA3oB9gf/AvQH/wIAAv8B7QKL
+        Ae0C/wIAAQcB9AFLAf8RAAH2AXoJmgN6AfYBGQH/ARkC/wH0ARkBCQEZAfQBGQX/AQAC/wH3Aq0CiwHt
+        A/8BcwL/AQcRAAH2AXoJmgN6AfYC3AIZAQkCGQHcARkB8QHcARkBGwIZAfQC/wHvBK0CiwHtAv8B8QEA
+        Af8BcxEAAfYBegKgB5oDegH2AtsB3AEZAdwBCQLcAhkB3AEJAxkB2wH/Ae8CswGtAfIC/wKLAe0B9AH/
+        AQAB/wHvEQAB9gF6A6AGmgJ6AXkB/wPbAdwB2wEJAdsB3AEZAdwBGgF6ARkC3AHbAf8BtAKzAbQBuwEJ
+        AbsBtAKLAe0E/xEAAfYBegKgCJoBegEbAf8B1ALbAdwE2wHcAdUBCQG8AdsB3ALbAf8BBwG0AbMBtQGz
+        Aa0B/wKtAosB9wH/AXMB/xEAAfYBegOgB5oBegH0AQAB1AHbA9QB1QHUAdUB2wHUAdwBGQPUAdUBAAH/
+        AQcBtAKzAa0B9AEJAbsBtAKLAQcB9BIAAfYBegSgBpoBegH0AQAB1QnUAdwB8ATUAgAB/wG8AbQBswGL
+        AfIBiwH/Aq0BiwFuAf8SAAH2AXoGoAGaAaACmgF6AfQBAAEJCbMBugG7AbMBGQL0AwAB/wG8AbQBrQG0
+        AbsCrQG0Ae0BZgH/EgAB9gF6CqABegH0AQAKswG0AbsCswEJAfQEAAH/AbwBtAOzAYsB9AGLAWYB/xIA
+        AfYBegqgAXoB9AEAAbMB7AGRArMBCQHcBLMBrQSzBQAB/wG8AbQCswGLAfQBiwHwAf8SAAH2AXoKoAF6
+        AfQBABCzBgAB/wG8BLQBvAH/EwAB9gF6A6AEmgOgAXoB9AEAEK0HAAb/FAAB9gpZAXoBmgH/AQAQrEEA
+        BP8E9AEcAU8CSQEoAVAB/wEAAfIMvAHyBAABCQm6ARkFAAEaCZoBGwMAAf8B7QP0A/MBUAF5AXgBVwJQ
+        Af8BAAG8DP8BvAMADbIDAA16AgAB/wG1AfQF8wHxAXICeQF4AVAB/wEAAbwM/wG8AgABCQ2yAfQBAAEa
+        DXoB/wEAAf8BtQL0BfMB8gFzApkBcgH/AQABvAz/AbwCAAG7DbIB9AEAARoNegH0AQAB/wG1A/QBtQOu
+        AfQB8gLxAv8BAAG8DP8BvAIAAbsFsgEAAvMFsgH0AQABGgV6AQAC9AV6AfQBAAH/AbUB/wL0Aa4DtAH0
+        AfMB8gHzAv8BAAG8DP8BvAIAAbsEsgH/AQABsgH/AfQEsgH0AQABGgR6Af8BAAF6Af8B9AR6AfQBAAH/
+        AbUC/wH0Aa4CCQHPAfQD8wL/AQABvAz/AbwCAAG7AbIB/wEJArIBGQEAAbMCsgHzAf8BsgH0AQABGgF6
+        Af8BGgJ6ARsBAAGaAnoB9AH/AXoB9AL/AbUB8gL/Aa4D8QH/AvMB8AH0Af8BAAG8Cf8C9AH/AbwCAAEJ
+        DbIB9AEAARoNegL/Ac8BrQHtAfEC/wP0AvMB8AGLAbMB/wEAAbwI/wP0Af8BvAIAAQkNsgH0AQABGg16
+        Af8BAAH/AbsBzwHsAfEC/wL0AfMB8AGLAbMBuwH/AQABvAf/AvQC8wH/AbwDAA2yAwANegMAAZEBuwHP
+        AewB8QL/AfQB8AGuAbQBuwH/AgABvAb/AvQC8wHyAf8BvAQABwkBswIJAfIFAAEbBhoBmgEbARoBGwQA
+        AbUB8wG7Ac8B7AHxAf8B8QGuAbQBuwH/AwABvAT/A/QB8wT/AbwHAAGyAQkB9AEJAbILAAF6ARoB9AEa
+        AXoHAAG1AfMB8gG7Ac8B7AG8ArQBuwH/BAABvAH/AfQB/wT0AfMB/wL0AQcB8QgAARkBswHzDQABGwF6
+        AfQIAAG1Af8B9AH/AbsBzwGuArsB/wUAAbwB/wX0AvMB/wHyAQcB8QH/KAABuwEZAbsHAAG8Cf8BBwHx
+        Af8zAAHyCbwB8QH/AwABQgFNAT4HAAE+AwABKAMAAUADAAEgAwABAQEAAQEGAAEBFgAD/wEAAYADAAHw
+        Af8CAAGAAwAB4AFxAgABgAMAAcABMAIAAYADAAGAAwABgAQAAQQCAAGABAABBAIAAYAHAAGABwABgAEB
+        AgABgAEBAgABgAEBAgABwAEBAgABgAEBAgAB4AEBAgABgAEBAgAB8AEBAgABgAEBAgAB+AEBAgABgAEB
+        AgAB/AEDAgABgAEBAgAB/gEHAgABgAEBAgAC/wIABP8BgAEAAYABAQHgAQMB4AEDAYABAAGAAQEBwAEB
+        AcABAQGAAQABgAEBAYABAAGAAQABgAEAAYABAQGAAQABgAEAAYABAAGAAQEBgQEAAYEBAAGAAQABgAEB
+        AYEBAAGBAQABgAEAAYABAQSAAgABgAEBAYABAAGAAwABgAEBAYABAAGAAQABgAEAAYABAQHAAQEBwAEB
+        AcABAQGAAQEB4AEDAeABAwHAAQMBgAEBAfwBHwH8AR8BwAEHAYABAQH+AT8B/gE/AcABDwGAAQEE/wH+
+        AT8BgAEDBv8BgAEHCw==
 </value>
   </data>
   <metadata name="mdiManager1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>137, 17</value>
+    <value>238, 17</value>
   </metadata>
   <metadata name="pmTabbed.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>257, 17</value>
+    <value>373, 17</value>
   </metadata>
   <metadata name="serviceController1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 55</value>
+    <value>815, 17</value>
+  </metadata>
+  <metadata name="timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
   </metadata>
 </root>
